--- a/App/ProductViewer/ProductViewer/Detail/ProductDetail.storyboard
+++ b/App/ProductViewer/ProductViewer/Detail/ProductDetail.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="7OU-yY-AMh">
             <objects>
                 <navigationController storyboardIdentifier="DetailRoot" id="LYx-Hf-dGh" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="PWe-eu-kQm">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="PWe-eu-kQm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -40,8 +40,11 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="pl2-C5-STq">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="599"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Jqi-Ki-4sh">
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Jqi-Ki-4sh">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="343"/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="uW9-Da-skN" appends="YES" id="otB-Mu-PWc"/>
+                                        </connections>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xTV-o8-igT">
                                         <rect key="frame" x="0.0" y="347" width="375" height="40"/>
@@ -115,6 +118,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ro2-aG-xCk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="uW9-Da-skN">
+                    <connections>
+                        <action selector="tapImage:" destination="Ipi-Y3-Urn" id="DJd-e9-f2Q"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="204" y="101"/>
         </scene>
