--- a/App/ProductViewer/ProductViewer/Detail/ProductDetail.storyboard
+++ b/App/ProductViewer/ProductViewer/Detail/ProductDetail.storyboard
@@ -18,20 +18,20 @@
                         <viewControllerLayoutGuide type="bottom" id="XWv-5C-ewy"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="n1A-UL-zN2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="pl2-C5-STq">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="663"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="599"/>
                                 <subviews>
                                     <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Jqi-Ki-4sh">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="407"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="343"/>
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="uW9-Da-skN" appends="YES" id="otB-Mu-PWc"/>
                                         </connections>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xTV-o8-igT">
-                                        <rect key="frame" x="0.0" y="411" width="375" height="40"/>
+                                        <rect key="frame" x="0.0" y="347" width="375" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="FS7-g2-qjB"/>
                                         </constraints>
@@ -40,7 +40,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="d4j-kl-Agn" userLabel="Description">
-                                        <rect key="frame" x="0.0" y="455" width="375" height="120"/>
+                                        <rect key="frame" x="0.0" y="391" width="375" height="120"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="120" id="oqx-bX-BcH"/>
@@ -51,7 +51,7 @@
                                         <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES"/>
                                     </textView>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DgZ-Tl-Azl">
-                                        <rect key="frame" x="0.0" y="579" width="375" height="40"/>
+                                        <rect key="frame" x="0.0" y="515" width="375" height="40"/>
                                         <color key="backgroundColor" red="0.80784313725490198" green="0.062745098039215685" blue="0.1764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="pbs-dh-5fT"/>
@@ -64,7 +64,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cus-BY-B74">
-                                        <rect key="frame" x="0.0" y="623" width="375" height="40"/>
+                                        <rect key="frame" x="0.0" y="559" width="375" height="40"/>
                                         <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="ILN-94-iCA"/>
@@ -93,7 +93,14 @@
                             <constraint firstItem="pl2-C5-STq" firstAttribute="leading" secondItem="n1A-UL-zN2" secondAttribute="leading" id="uKi-G7-bVu"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="8lg-Vi-hWt"/>
+                    <navigationItem key="navigationItem" id="8lg-Vi-hWt">
+                        <barButtonItem key="rightBarButtonItem" image="MagnifyingGlass" id="k8g-zu-sUL">
+                            <connections>
+                                <action selector="showZoomedInImage:" destination="Ipi-Y3-Urn" id="s4l-5e-AHH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="addToCartButton" destination="DgZ-Tl-Azl" id="bVa-8c-bZQ"/>
                         <outlet property="addToListButton" destination="Cus-BY-B74" id="9Xp-EV-q1j"/>
@@ -111,4 +118,7 @@
             <point key="canvasLocation" x="204" y="101"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MagnifyingGlass" width="16" height="16"/>
+    </resources>
 </document>
